Global  - Add recogito lib  - Enhance style
Document
 - Add tags

--- a/notes/templates/home/home.html
+++ b/notes/templates/home/home.html
@@ -13,6 +13,8 @@
                 Take notes from documents. Organize, reference, and browse them.
             </p>
             <a href="{% url 'notes-note-create' %}" class="btn btn-primary">Write Note</a>
+            or 
+            <a href="{% url 'documents-document-import' %}" class="btn btn-primary">Import Document</a>
         </div>
     </div>
 </div>
