--- a/birdbrain/templates/base.html
+++ b/birdbrain/templates/base.html
@@ -10,6 +10,9 @@
          @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@100;400;500;600;700;800;900&display=swap');
         </style>
 
+        {% block css %}
+        {% endblock %}
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
@@ -79,7 +82,8 @@
             </div>
         </div>
 	  </body>
-
+    {% block javascript %}
+    {% endblock %}
 </html>
 
 
