--- a/documents/templates/documents/audio_detail.html
+++ b/documents/templates/documents/audio_detail.html
@@ -18,7 +18,7 @@
          {% for annotation in document.annotations.all %}
          {"start": {{ annotation.start }},
           "end": {{ annotation.end }},
-          "data": {"note": "{{ annotation.note }}"},
+          "data": {"note": "{{ annotation.text }}"},
          },
          {% endfor %}
      ]);
